--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,14 @@
       "dest": "/api/$1"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/client/static/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/client/assets/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/client/index.html"
     }
